# vnpy

./: .flake8  .gitignore  install.bat  requirements.txt  setup.cfg  test_qt.py
examples/cta_backtesting/: backtesting_demo.ipynb  portfolio_backtesting.ipynb  trade_by_trade.ipynb
examples/portfolio_backtesting/: backtesting_demo.ipynb
examples/spread_backtesting/: backtesting.ipynb
examples/veighna_trader/: run.py
examples/vn_trader/: run.py
own_utils/: data_import_jinshuyuan_index_tick.py  data_import_jinshuyuan_tick.py  data_import_jqdata_bar.py  data_import_rqdata_bar.py  data_update_rqdata.py  data_update_rqdata_index_fut.py  load_data_Test.py  rolling_opt.py  rolling_test.py  tick_to_minute_bar.py
tests/: test_trader_utility.py
tests/data/: tick_lu2403_20240106.pkl
vnpy/: __init__.py
vnpy/app/portfolio_strategy/: backtesting.py  engine.py  template.py
vnpy/app/portfolio_strategy/strategies/: rolling_contract_strategy.py  rolling_contract_strategy1.py  rolling_contract_strategy2.py
vnpy/chart/: item.py  widget.py
vnpy/event/: engine.py
vnpy/trader/: constant.py  converter.py  database.py  datafeed.py  engine.py  event.py  gateway.py  object.py  optimize.py  setting.py  utility.py
vnpy/trader/locale/: __init__.py
vnpy/trader/ui/: __init__.py  mainwindow.py  qt.py  utilities.py  widget.py
