[metadata]
name = vnpy
version = attr: vnpy.__version__
author = YQ Tsui
description = Trading and investment management framework for self usage. Forked from vnpy/vnpy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.vnpy.com
license = MIT
license_files = LICENSE
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
project_urls =
	Documentation = https://www.vnpy.com/docs

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    tzlocal
    PySide6
    pyqtgraph
    qdarkstyle
    numpy
    pandas
    matplotlib
    seaborn
    ta-lib
    deap
    pyzmq
    plotly
    tqdm
    cryptography
    keyring

[options.package_data]
* = *.dll, *.so, *.pyd

[pylint.]
disable = C0104,C0114,C0115,C0116,C0301,C0302,C0411,C0413,C1802,R0401,R0801,R0901,R0902,R0903,R0904,R0911,R0912,R0913,R0914,R0915,R1702,R1720,W0105,W0123,W0201,W0511,W0613,W1113,W1514,E0401,E1121,C0103,C0209,R0402,R1705,R1710,R1725,R1735,W0102,W0212,W0221,W0223,W0231,W0237,W0612,W0621,W0622,W0703,W1309,E1102,E1136,I1101,C0112
output-format = colorized
extension-pkg-allow-list = numpy,pandas,plotly,PiSide6,PyQt5,PyQt6,talib
max-line-length = 120
